--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Lomatanzas Family Lodge - Cabañas y Motorhome" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/images/brand/favicon.svg" />
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" />
 		<title>{title}</title>
 	</head>
@@ -24,7 +24,7 @@ const { title } = Astro.props;
 		<header class="fixed top-0 w-full z-50 bg-white/95 backdrop-blur-sm shadow-sm transition-all duration-300">
 			<div class="container-custom py-4 flex justify-between items-center">
 				<a href="/" class="flex items-center gap-2">
-					<img src="/wp-content/uploads/2017/10/logo_lomatanzas.png" alt="Lomatanzas Logo" class="h-12 w-auto" />
+					<img src="/images/brand/logo_lomatanzas.png" alt="Lomatanzas Logo" class="h-12 w-auto" />
 				</a>
 				
 				<nav class="hidden md:block">
